@@ -1,3 +1,8 @@
+2009-03-25  Sergei Gavrikov  <sergei.gavrikov@gmail.com>
+
+	* src/main.c: Move platform info behind GPL banner.
+	[ Bugzilla 1000688 ]
+
 2009-03-20  John Dallaway  <john@dallaway.org.uk>
 
 	* doc/redboot_cmds.sgml: Add note concerning the termination of
